test_results_tiers_overwrite.txt
Creating test database for alias 'default'...
E
======================================================================
ERROR: test_client_list (tests.test_tiers_ui.ClientUIFlowTest.test_client_list)
Test the client list view
----------------------------------------------------------------------
Traceback (most recent call last):
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 577, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'endif'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Antigravity\Matt Dev\ERP\tests\test_tiers_ui.py", line 22, in test_client_list
    response = self.client.get(reverse('tiers:client_list'))
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\client.py", line 1124, in get
    response = super().get(
        path,
    ...<4 lines>...
        **extra,
    )
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\client.py", line 475, in get
    return self.generic(
           ~~~~~~~~~~~~^
        "GET",
        ^^^^^^
    ...<4 lines>...
        **extra,
        ^^^^^^^^
    )
    ^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\client.py", line 671, in generic
    return self.request(**r)
           ~~~~~~~~~~~~^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\client.py", line 1087, in request
    self.check_exception(response)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\client.py", line 802, in check_exception
    raise exc_value
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\core\handlers\base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "C:\Antigravity\Matt Dev\ERP\apps\tiers\views.py", line 28, in client_list
    return render(request, 'tiers/client_list.html', {'page_obj': page_obj})
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loader.py", line 62, in render_to_string
    return template.render(context, request)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\backends\django.py", line 107, in render
    return self.template.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 174, in render
    return self._render(context)
           ~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\utils.py", line 114, in instrumented_test_render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loader_tags.py", line 160, in render
    return compiled_parent._render(context)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\test\utils.py", line 114, in instrumented_test_render
    return self.nodelist.render(context)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loader_tags.py", line 66, in render
    result = block.nodelist.render(context)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1091, in render
    return SafeString("".join([node.render_annotated(context) for node in self]))
                               ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 1052, in render_annotated
    return self.render(context)
           ~~~~~~~~~~~^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loader_tags.py", line 200, in render
    template = context.template.engine.select_template(template_name)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\engine.py", line 228, in select_template
    return self.get_template(template_name)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\defaulttags.py", line 894, in do_for
    nodelist_loop = parser.parse(
        (
    ...<2 lines>...
        )
    )
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 579, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\utopi\AppData\Roaming\Python\Python314\site-packages\django\template\base.py", line 634, in invalid_block_tag
    raise self.error(
    ...<8 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Template: C:\Antigravity\Matt Dev\ERP\apps\tiers\templates\tiers\partials\client_table_body.html, Invalid block tag on line 3: 'endif', expected 'empty' or 'endfor'. Did you forget to register or load this tag?

----------------------------------------------------------------------
Ran 1 test in 1.454s

FAILED (errors=1)
Destroying test database for alias 'default'...
Found 1 test(s).
System check identified no issues (0 silenced).
